--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "@heroicons/vue": "^2.1.3",
         "laravel-precognition-vue-inertia": "^0.5.4"
     }
 }
